# aiagents-backend

./: .gitignore  main.py  pyproject.toml
src/: run_project.py  run_server.py
src/features/ai/: config.py
src/features/ai/agents/: custom_agent_service.py  enhanced_suggestion_agent.py  production_agent_service.py  query_agent.py  response_suggestions_agent.py  summarize_chat_agent.py
src/features/ai/llms/: graph.py
src/features/ai/models/: models.py
src/features/ai/services/: supabase_service.py
src/features/ai/utils/: conversation_utils.py  langgraph_utils.py  prompts.py
src/features/ai/vector/: multi_kb_service.py  vector_store.py
src/features/server/: api.py  api_backup.py  config.py  security.py
src/features/server/routes/: __init__.py  agents.py  knowledgebase.py  management.py  query.py  suggestions.py  summary.py  training.py  websocket.py
src/features/server/sockets/: chat.py  sockets.py
