[project]
name = "vox-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.11",
    "circuitbreaker>=2.1.3",
    "fastapi-security>=0.1.0",
    "langchain-chroma>=0.2.4",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "langchain-voyageai>=0.1.6",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.7",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.22.0",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart",
    "structlog>=25.4.0",
    "supabase>=2.15.2",
    "tenacity>=9.1.2",
]
